[package]
name = "poker_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "poker_server"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.12.0", features = ["full"] }
poker = { path = "../poker" }
anyhow = "1.0.100"
