[package]
name = "poker_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "poker_server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "=0.8.6", features = ["ws"] }
tokio = { version = "1.12.0", features = ["full"] }
poker = { path = "../poker" }
anyhow = "1.0.100"
config = "0.14"
dirs = "6.0.0"
log = "0.4"
log4rs = "1.4"
getopts = "0.2.21"